<resources>
    <string name="my_app_name">SelfCalendar</string>
    <string name="add_event">添加日历事件</string>
    <string name="add_task">添加任务计划</string>
    <string name="check_task">查看任务列表</string>
    <string name="add_notice">提醒列表</string>
    <string name="modify_notice">更新提醒</string>
    <string name="setting">设置</string>
    <string name="notice">提醒</string>

    <string name="setting_week_start">每周起始日</string>
    <string name="setting_week_start_1">周一</string>
    <string name="setting_week_start_7">周日</string>

    <string name="show_week_num">显示周数</string>

    <string name="week_01">日</string>
    <string name="week_02">一</string>
    <string name="week_03">二</string>
    <string name="week_04">三</string>
    <string name="week_05">四</string>
    <string name="week_06">五</string>
    <string name="week_07">六</string>
</resources>
