<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px001"
        android:background="@color/divider_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp">

        <View
            android:layout_width="@dimen/px001"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/week_7_back_color"
            android:text="@string/week_01"
            android:textColor="@color/week_color_01"/>

        <View
            android:layout_width="@dimen/px001"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/week_02"
            android:textColor="@color/week_color_02"/>

        <View
            android:layout_width="@dimen/px001"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/week_03"
            android:textColor="@color/week_color_02"/>

        <View
            android:layout_width="@dimen/px001"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/week_04"
            android:textColor="@color/week_color_02"/>

        <View
            android:layout_width="@dimen/px001"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/week_05"
            android:textColor="@color/week_color_02"/>

        <View
            android:layout_width="@dimen/px001"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/week_06"
            android:textColor="@color/week_color_02"/>

        <View
            android:layout_width="@dimen/px001"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/week_6_back_color"
            android:text="@string/week_07"
            android:textColor="@color/week_color_01"/>

        <View
            android:layout_width="@dimen/px001"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/month_loop_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>
